[project]
name = "moderation-service"
version = "1.0.0"
description = "Microservice for API interaction with moderation events"
authors = []
requires-python = ">=3.12"


dependencies = [
    "msfwk>=1.0.19",
    "aio-pika==9.5.4",
]

[tool.uv.sources]
msfwk = { path = "libs/base-service" , editable = true}
despsharedlibrary = { path = "libs/desp_shared_library", editable = true }
